tests/ui/feature-gates/feature-gate-loop-match.stderr
error[E0658]: the `#[loop_match]` attribute is an experimental feature
  --> $DIR/feature-gate-loop-match.rs:9:5
   |
LL |     #[loop_match]
   |     ^^^^^^^^^^^^^
   |
   = note: see issue #138777 <https://github.com/rust-lang/rust/issues/138777> for more information
   = help: add `#![feature(loop_match)]` to the crate attributes to enable
   = note: this compiler was built on YYYY-MM-DD; consider upgrading it if it is out of date

error[E0658]: the `#[const_continue]` attribute is an experimental feature
  --> $DIR/feature-gate-loop-match.rs:14:21
   |
LL |                     #[const_continue]
   |                     ^^^^^^^^^^^^^^^^^
   |
   = note: see issue #138777 <https://github.com/rust-lang/rust/issues/138777> for more information
   = help: add `#![feature(loop_match)]` to the crate attributes to enable
   = note: this compiler was built on YYYY-MM-DD; consider upgrading it if it is out of date

error[E0658]: the `#[const_continue]` attribute is an experimental feature
  --> $DIR/feature-gate-loop-match.rs:19:21
   |
LL |                     #[const_continue]
   |                     ^^^^^^^^^^^^^^^^^
   |
   = note: see issue #138777 <https://github.com/rust-lang/rust/issues/138777> for more information
   = help: add `#![feature(loop_match)]` to the crate attributes to enable
   = note: this compiler was built on YYYY-MM-DD; consider upgrading it if it is out of date

error: aborting due to 3 previous errors

For more information about this error, try `rustc --explain E0658`.
